<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
	<LinearLayout 
	    android:id="@+id/share_content"
	    android:layout_width="match_parent"
	    android:layout_height="225dp"
	    android:layout_margin="10dp"
	    android:background="@drawable/share_et_bg"
	    android:orientation="vertical">
	    <EditText 
	        android:id="@+id/et_140_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:background="@color/nothing"
	        android:hint="@string/share_et_txt"/>
	    <ImageView 
	        android:id="@+id/iv_pic_preview_content"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:paddingLeft="10dp"
	        android:visibility="gone"
	        
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/share_pic_preview"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/share_tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingTop="10dp"
	    android:paddingRight="10dp"
	    android:gravity="right">
	    <ImageButton 
	        android:id="@+id/at_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/at"
	        android:contentDescription="@string/share_button_at"/>
	    <ImageButton 
	        android:id="@+id/album_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/album"
	        android:contentDescription="@string/share_button_album"/>
	    <ImageButton 
	        android:id="@+id/pic_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/pic"
	        android:contentDescription="@string/share_button_pic"/>
	    <ImageButton 
	        android:id="@+id/huati_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/huati"
	        android:contentDescription="@string/share_button_huati"/>
	</LinearLayout>
</LinearLayout>
