<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/item_head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <ImageView 
            android:id="@+id/item_user_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/list_item_user_icon"/>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:orientation="vertical">
            <TextView 
	            android:id="@+id/item_user_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:text="@string/list_item_name"/>
        	<TextView 
	            android:id="@+id/item_source_And_creatTime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:alpha="0.7"
	            android:text="@string/list_item_sourceAtime"/>
        </LinearLayout>
        
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/item_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/item_body_bg">
        <TextView 
            android:id="@+id/item_body_content_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_txt"/>
        <ImageView 
            android:id="@+id/item_body_content_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/item_body_img"
            android:contentDescription="@string/list_item_img"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
    </LinearLayout>
</LinearLayout>
